fix: awesomplete options hover bg in dark mode

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -160,6 +160,8 @@
 	--text-on-light-gray: var(--gray-800);
 	--text-on-purple: var(--purple-500);
 
+	--awesomplete-hover-bg: var(--control-bg);
+
 	// Other Colors
 	--sidebar-select-color: var(--gray-200);
 
