--- a/frappe/public/scss/desk/dark.scss
+++ b/frappe/public/scss/desk/dark.scss
@@ -29,6 +29,7 @@
 	--control-bg: var(--gray-700);
 	--control-bg-on-gray: var(--gray-800);
 	--awesomebar-focus-bg: var(--control-bg);
+	--awesomplete-hover-bg: var(--gray-700);
 	--modal-bg: var(--gray-700);
 	--toast-bg: var(--modal-bg);
 	--popover-bg: var(--bg-color);
